--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,7 @@
 //- this is a master layout for all our templates to use
 //- Appending an equals sign to an attribute is one of the methods that Pug uses for interpolation, eg title. use this to pass the title dynamically to each template.
 //- In a template, a block is simply a “block” of Pug that a child template may replace.
+//- including two files from our previously created css folder and adding a wrapper div.
 
 doctype html
 html
